# commandGPT

./: .gitignore  COMPREHENSIVE_ERROR_HANDLING.md  Cargo.toml  DOCS_INDEX.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  ROADMAP.md  SHELL_HOOK.md  SHELL_HOOK_SUMMARY.md  TODO.md  build.sh  commandgpt.1  dev-clean.sh
.commandgpt/: system.md
.commandgpt/context/: development.md
.github/workflows/: ci.yml
benches/: performance.rs
src/: config.rs  context.rs  error.rs  executor.rs  history.rs  history_old.rs  hook.rs  hook_tests.rs  lib.rs  main.rs  openai.rs  repl.rs  safety.rs  telemetry.rs
tests/: integration_tests.rs
