[package]
name = "commandgpt"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "ChatGPT-powered zsh command generator for macOS"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourorg/commandgpt"
homepage = "https://github.com/yourorg/commandgpt"
readme = "README.md"
keywords = ["cli", "chatgpt", "shell", "macos", "command"]
categories = ["command-line-utilities"]

[[bin]]
name = "commandgpt"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
hyper = { version = "0.14", features = ["client", "http2"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# macOS Keychain integration
security-framework = "2.9"

# File system and paths
dirs-next = "2.0"

# Interactive terminal
rustyline = "13.0"
termcolor = "1.4"

# Shell parsing and execution
shell-words = "1.1"
nix = { version = "0.27", features = ["process", "signal"] }

# Signal handling
ctrlc = "3.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Embedded database for history
sled = "0.34"

# Temporary files
tempfile = "3.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for safety checks
regex = "1.10"

# Configuration
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Additional dependencies
rpassword = "7.3"
uuid = { version = "1.6", features = ["v4"] }
bincode = "1.3"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
wiremock = "0.5"
httpmock = "0.6"
serial_test = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3

# Build configuration for cross-compilation
[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
